# akashikosen

./: .gitignore  README.md  basic_rag.py  build_db.py  debug.py  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
frontend/: index.html  style.css
